--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@flaticon/flaticon-uicons": "^3.3.1",
     "@tailwindcss/vite": "^4.0.14",
     "axios": "^1.8.3",
     "react": "^19.0.0",
